--- a/portable.html
+++ b/portable.html
@@ -11,160 +11,186 @@
 </head>
 
 <body>
-<div class="page1">
+    <div class="page1">
+        <a href="http://jawe.pw/">
+            <div id="mobilebanner">
+
+                <div class="small">Want to visit the desktop version of this site? Click here</div>
+            </div>
+
+        </a>
 
 
+        <div class="big"><b>J</b>awe's <b>A</b>rchive</div>
+        <br>
+        <br>
+        <br>
+        <div class="small">
+            Welcome!
+            <br>
+            <br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction stories I collected.
+            <br>I take no credit for the content you see on here, all rights belong to their respective owners, yada yada.
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
-    <div class="big"><b>J</b>awe's <b>A</b>rchive</div>
-    <br>
-    <br>
-    <br>
-    <div class="small">
-        Welcome!
-        <br>
-        <br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction stories I collected.
-        <br>I take no credit for the content you see on here, all rights belong to their respective owners, yada yada.
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+            <br>
+            <br>
+        </div>
+        <div class="medium">You can find the bookshelf below.
+            <br>
+            <br>
+            <br>
+        </div>
 
-        <br>
-        <br>
+        <div class="seperator"></div>
+
     </div>
-    <div class="medium">You can find the bookshelf below.<br><br><br></div>
-    
-    <div class="seperator"></div>
-    
-    </div>
-        <div class="page2">
-<div class="medium"><br><br></div>
-    <div class="big"><b>B</b>ookshelf</div>
-    <br>
-    <br>
+    <div class="page2">
+        <div class="medium">
+            <br>
+            <br>
+        </div>
+        <div class="big"><b>B</b>ookshelf</div>
+        <br>
+        <br>
 
-                        <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
-                            <div class="child">
-                                The Secret Diary
-                                <br>Of Cameron Baum
-                                <br>
-                                <br>
-                                <br>by Pjazz
-                                <br>
-                                <br> Status:
-                                <div class="orange">In progress</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
+            <div class="child">
+                The Secret Diary
+                <br>Of Cameron Baum
+                <br>
+                <br>
+                <br>by Pjazz
+                <br>
+                <br> Status:
+                <div class="orange">In progress</div>
+            </div>
+        </a>
 
-                        <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
-                            <div class="child">
-                                Born To Fight
-                                <br>
-                                <br>
-                                <br>
-                                <br>by River2027
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
+            <div class="child">
+                Born To Fight
+                <br>
+                <br>
+                <br>
+                <br>by River2027
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
 
 
-                        <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
-                            <div class="child">
-                                I Love You Too
-                                <br>
-                                <br>
-                                <br>
-                                <br>by King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+            <div class="child">
+                I Love You Too
+                <br>
+                <br>
+                <br>
+                <br>by King Steve
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
 
-                        <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
-                            <div class="child">
-                                Judgement's Dawn
-                                <br>
-                                <br>
-                                <br>
-                                <br>by King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
+            <div class="child">
+                Judgement's Dawn
+                <br>
+                <br>
+                <br>
+                <br>by King Steve
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
 
-                        <a href="https://www.fanfiction.net/s/5065966/1/Century">
-                            <div class="child">
-                                Century
-                                <br>
-                                <br>
-                                <br>
-                                <br>by King Steve
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-                        <br>
+        <a href="https://www.fanfiction.net/s/5065966/1/Century">
+            <div class="child">
+                Century
+                <br>
+                <br>
+                <br>
+                <br>by King Steve
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
+        <br>
 
-                        <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
-                            <div class="child">
-                                Cameron Grows Up
-                                <br>
-                                <br>
-                                <br>
-                                <br>by ReaganKaseyFan
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+            <div class="child">
+                Cameron Grows Up
+                <br>
+                <br>
+                <br>
+                <br>by ReaganKaseyFan
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
 
-                        <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
-                            <div class="child">
-                                The Future Cameron
-                                <br>
-                                <br>
-                                <br>
-                                <br>by ReaganKaseyFan
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
+        <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+            <div class="child">
+                The Future Cameron
+                <br>
+                <br>
+                <br>
+                <br>by ReaganKaseyFan
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
 
-                        <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
-                            <div class="child">
-                                Searching for Serenity
-                                <br>
-                                <br>
-                                <br>by River2027
-                                <br>
-                                <br> Status:
-                                <div class="green">Completed</div>
-                            </div>
-                        </a>
-    <div class="medium"><br><br></div>
-    <div class="seperator"></div>
+        <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
+            <div class="child">
+                Searching for Serenity
+                <br>
+                <br>
+                <br>by River2027
+                <br>
+                <br> Status:
+                <div class="green">Completed</div>
+            </div>
+        </a>
+        <div class="medium">
+            <br>
+            <br>
+        </div>
+        <div class="seperator"></div>
     </div>
 
     <div class="page3">
-        <div class="medium"><br><br><br><br></div>
-    <div class="big">Made with</div>
-    <div class="heart">♥</div>
-        <div class="medium"><br><br><br><br></div>
+        <div class="medium">
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="big">Made with</div>
+        <div class="heart">♥</div>
+        <div class="medium">
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
 
 
 
-    <div class="construction1"></div>
-    <div class="footertext">
-        This is the mobile friendly version of this site. Only works on mobile devices. Will glitch out on larger devices.</div>
+        <div class="construction1"></div>
+        <div class="footertext">
+            This is the mobile friendly version of this site. Only works on mobile devices. Will glitch out on larger devices.</div>
 
-</div>
+    </div>
 
 </body>
 
