--- a/portable.html
+++ b/portable.html
@@ -161,6 +161,17 @@
                 <div class="green">Completed</div>
             </div>
         </a>
+
+        <a>
+            <div class="child">
+                <br>
+                <br>
+                <br>
+                <br>More coming soon...
+                <br>
+            </div>
+        </a>
+
         <div class="medium">
             <br>
             <br>
