--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>404 Not Found</title>
 
-    <link rel="stylesheet" type="text/css" href="../scripts/style.css">
-    <script type="text/javascript" src="../scripts/countdown.js"></script>
-    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
+    <link rel="stylesheet" type="text/css" href="/scripts/style.css">
+    <script type="text/javascript" src="/scripts/countdown.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 
 <body>
