--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											<br>
 											<br>Pjazz
 											<br>
-											<br> Status:
+											<br>
 											<div class="orange">In progress</div>
 										</div>
 									</a>
@@ -104,7 +104,7 @@
 											<br>
 											<br>River2027
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -117,7 +117,7 @@
 											<br>
 											<br>River2027
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -130,7 +130,7 @@
 											<br>
 											<br>King Steve
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -142,7 +142,7 @@
 											<br>
 											<br>King Steve
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -154,7 +154,7 @@
 											<br>
 											<br>King Steve
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -169,7 +169,7 @@
 											<br>
 											<br>ReaganKaseyFan
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
 										</div>
 									</a>
@@ -182,8 +182,33 @@
 											<br>
 											<br>ReaganKaseyFan
 											<br>
-											<br> Status:
+											<br>
 											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4298162/1/Liberation-Day">
+										<div class="child">
+											Liberation Day
+											<br>
+											<br>
+											<br>
+											<br>King Steve
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4298162/1/Liberation-Day">
+										<div class="child">
+											Enemy Of My Enemy:
+											<br> Vanguard
+											<br>
+											<br>King Steve
+											<br>
+											<br>
+											<div class="orange">Part 1/3 completed</div>
 										</div>
 									</a>
 								</div>
