--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
 
 									<a href="https://www.fanfiction.net/s/9525450/1/Enemy-of-My-Enemy-Vanguard">
 										<div class="child">
-											Enemy Of My Enemy:
-											<br> Vanguard
+											Enemy Of My Enemy: Vanguard
 											<br>
 											<br>King Steve
 											<br>
