--- a/tock.html
+++ b/tock.html
@@ -2,20 +2,20 @@
 
 <head>
       <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-      <title>You can call me Tock</title>
+      <title>You can call me "Tock"</title>
       <link rel="stylesheet" type="text/css" href="scripts/style.tock.css">
       <script type="text/javascript" src="scripts/gifloop.js"></script>
 
 </head>
 
 <body>
-            <center>
-      <div id="noise">
-           
-      </div>
-      
-                  <img id="headerimg" src="data/media/images/other/sequestered/header.png">
-      <div id="nowplaying">&#9658; Neroche - Vapour Trails</div>
+      <center>
+            <div id="noise">
+
+            </div>
+
+            <img id="headerimg" src="data/media/images/other/sequestered/header.png">
+            <div id="nowplaying">&#9658; Neroche - Vapour Trails</div>
 
 
             <div id="bg"></div>
@@ -25,11 +25,11 @@
 
 
 
-      <audio id="music" autoplay="true" loop="true" hidden="true" preload="auto">
-            <source src="data/media/audio/2.mp3" type="audio/mpeg">
-            <source src="data/media/audio/2.ogg" type="audio/ogg">
-
-      </audio>
+            <audio id="music" autoplay="true" loop="true" hidden="true" preload="auto">
+                  <source src="data/media/audio/2.mp3" type="audio/mpeg">
+                  <source src="data/media/audio/2.ogg" type="audio/ogg">
+                        Damn, your computer doesn't support this audio element!
+            </audio>
 
 
       </center>
