--- a/tock.html
+++ b/tock.html
@@ -15,7 +15,7 @@
             </div>
 
             <img id="headerimg" src="data/media/images/other/sequestered/header.png">
-            <div id="nowplaying">&#9658; Neroche - Vapour Trails</div>
+            <div id="nowplaying">&#9658; Cognitif - Yeah Yeah Yeah</div>
 
 
             <div id="bg"></div>
@@ -26,8 +26,8 @@
 
 
             <audio id="music" autoplay="true" loop="true" hidden="true" preload="auto">
-                  <source src="data/media/audio/2.mp3" type="audio/mpeg">
-                  <source src="data/media/audio/2.ogg" type="audio/ogg">
+                  <source src="data/media/audio/3.mp3" type="audio/mpeg">
+                  <source src="data/media/audio/3.ogg" type="audio/ogg">
                         Damn, your computer doesn't support this audio element!
             </audio>
 
