--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a href="http://jawe.pw/portable">
 						<div id="mobilebanner">
 
-							<div class="mediumsmall">On mobile but didn't get a pop-up? Click here</div>
+							<div class="mediumsmall">View mobile version (OUTDATED)</div>
 						</div>
 
 					</a>
@@ -84,6 +84,7 @@
 
 							<div class="section slides">
 								<div class="slide slide1">
+									<div class="big">Pjazz 1/1</div>
 									<a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
 										<div class="child">
 											The Secret Diary
@@ -97,10 +98,73 @@
 										</div>
 									</a>
 
+									<a href="https://www.fanfiction.net/s/6572066/1/Cameron-s-Christmas-Carol">
+										<div class="child">
+											Cameron's Christmas Carol
+											<br>
+											<br>
+											<br>Pjazz
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/5124616/1/Metal-Guru">
+										<div class="child">
+											Metal Guru
+											<br>
+											<br>
+											<br>
+											<br>Pjazz
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+								</div>
+								<div class="slide slide2">
+									<div class="big">River2027 1/1</div>
+									<a href="https://www.fanfiction.net/s/4712067/1/Christmas-with-the-Connors">
+										<div class="child">
+											Christmas with the Connors
+											<br>
+											<br>
+											<br>River2027
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/5016353/1/Fair-is-Foul">
+										<div class="child">
+											Fair is Foul
+											<br>
+											<br>
+											<br>
+											<br>River2027
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+									<a href="https://www.fanfiction.net/s/4921309/1/More-Than-Metal">
+										<div class="child">
+											More Than Metal
+											<br>
+											<br>
+											<br>
+											<br>River2027
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
 									<a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
 										<div class="child">
-											Searching for Serenity
-											<br>
+											Terminator: Searching for Serenity
 											<br>
 											<br>River2027
 											<br>
@@ -122,9 +186,13 @@
 										</div>
 									</a>
 
-									<a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+								</div>
+								<div class="slide slide3">
+									<div class="big">King Steve 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/4298162/1/Liberation-Day">
 										<div class="child">
-											I Love You Too
+											Liberation Day
 											<br>
 											<br>
 											<br>
@@ -146,6 +214,7 @@
 											<div class="green">Completed</div>
 										</div>
 									</a>
+
 									<a href="https://www.fanfiction.net/s/5065966/1/Century">
 										<div class="child">
 											Century
@@ -159,37 +228,9 @@
 										</div>
 									</a>
 
-								</div>
-								<div class="slide slide2">
-									<a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+									<a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
 										<div class="child">
-											Cameron Grows Up
-
-											<br>
-											<br>
-											<br>ReaganKaseyFan
-											<br>
-											<br>
-											<div class="green">Completed</div>
-										</div>
-									</a>
-
-									<a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
-										<div class="child">
-											The Future Cameron
-
-											<br>
-											<br>
-											<br>ReaganKaseyFan
-											<br>
-											<br>
-											<div class="green">Completed</div>
-										</div>
-									</a>
-
-									<a href="https://www.fanfiction.net/s/4298162/1/Liberation-Day">
-										<div class="child">
-											Liberation Day
+											I Love You too
 											<br>
 											<br>
 											<br>
@@ -202,28 +243,309 @@
 
 									<a href="https://www.fanfiction.net/s/9525450/1/Enemy-of-My-Enemy-Vanguard">
 										<div class="child">
-											Enemy Of My Enemy: Vanguard
+											Enemy of My Enemy:
+											<br>Vanguard
 											<br>
 											<br>King Steve
 											<br>
 											<br>
-											<div class="orange">Part 1/3 completed</div>
+											<div class="red">1/3: Abandoned</div>
 										</div>
 									</a>
 								</div>
-								<div class="slide slide3">
 
+								<div class="slide slid4">
+									<div class="big">ReaganCaseyFan 1/1</div>
 
-									<a>
+									<a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
 										<div class="child">
+											Cameron Grows Up
 											<br>
 											<br>
+											<br>ReaganCaseyFan
 											<br>
-											<br>More coming soon...
 											<br>
+											<div class="green">1/2: Completed</div>
 										</div>
 									</a>
 
+									<a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+										<div class="child">
+											The Future Cameron
+											<br>
+											<br>
+											<br>ReaganCaseyFan
+											<br>
+											<br>
+											<div class="orange">2/2: In Progress</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/11521677/1/Cameron-and-John-s-Wedding">
+										<div class="child">
+											Cameron and
+											<br>John's Wedding
+											<br>
+											<br>
+											<br>ReaganCaseyFan
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+								</div>
+
+								<div class="slide slid5">
+									<div class="big">Stormin Mormon 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/4642835/1/Does-John-Love-Me">
+										<div class="child">
+											Does John Love Me?
+											<br>
+											<br>
+											<br>Stormin Mormon
+											<br>
+											<br>
+											<div class="green">1/5: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4649061/1/The-Law-of-Consistency">
+										<div class="child">
+											The Law Of Consistency
+											<br>
+											<br>
+											<br>Stormin Mormon
+											<br>
+											<br>
+											<div class="green">2/5: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4682710/1/Confrontation-of-Enemies">
+										<div class="child">
+											Confrontation of Enemies
+											<br>
+											<br>
+											<br>Stormin Mormon
+											<br>
+											<br>
+											<div class="green">3/5: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/4962369/1/Heartless-Strike">
+										<div class="child">
+											Heartless Strike
+											<br>
+											<br>
+											<br>
+											<br>Stormin Mormon
+											<br>
+											<br>
+											<div class="green">4/5: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/5247302/1/A-Common-Enemy">
+										<div class="child">
+											A Common Enemy
+											<br>
+											<br>
+											<br>
+											<br>Stormin Mormon
+											<br>
+											<br>
+											<div class="red">5/5: Abandoned</div>
+										</div>
+									</a>
+								</div>
+
+
+								<div class="slide slid6">
+									<div class="big">Orsino 12 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/6981787/1/The-Unbroken-Circle">
+										<div class="child">
+											The Unbroken Circle
+											<br>
+											<br>
+											<br>Orsino 12
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/7143495/1/The-Substance-Of-Love">
+										<div class="child">
+											The Substance Of Love
+											<br>
+											<br>
+											<br>Orsino 12
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/7191629/1/Call-Back-Yesterday">
+										<div class="child">
+											Call Back Yesterday
+											<br>
+											<br>
+											<br>Orsino 12
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/7650421/1/Requiems-and-Reveries">
+										<div class="child">
+											Requiems and Reveries
+											<br>
+											<br>
+											<br>Orsino 12
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/6803740/1/The-Thucydides-Project">
+										<div class="child">
+											The Thucycides Project
+											<br>
+											<br>
+											<br>Orsino 12
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+								</div>
+
+								<div class="slide slid7">
+									<div class="big">ElusiveSanity 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/5115740/1/Irony-Thy-Name-is-Cameron">
+										<div class="child">
+											Irony, Thy Name is Cameron
+											<br>
+											<br>
+											<br>ElusiveSanity
+											<br>
+											<br>
+											<div class="green">1/3: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/5219749/1/That-Which-We-Call-Fate">
+										<div class="child">
+											That Which We Call Fate
+											<br>
+											<br>
+											<br>ElusiveSanity
+											<br>
+											<br>
+											<div class="green">2/3: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/6240389/1/Be-Not-Afraid-of-Greatness">
+										<div class="child">
+											Be Not Afraid of Greatness
+											<br>
+											<br>
+											<br>ElusiveSanity
+											<br>
+											<br>
+											<div class="red">3/3: Abandoned</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/7840060/1/Take-My-Heart-But-Please-Don-t-Break-It">
+										<div class="child">
+											Take My Heart, But Please Don't Break It
+											<br>
+											<br>ElusiveSanity
+											<br>
+											<br>
+											<div class="green">Completed</div>
+										</div>
+									</a>
+
+								</div>
+
+								<div class="slide slid8">
+									<div class="big">Dekardkain 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/5652260/1/Becoming-John-Connor">
+										<div class="child">
+											Becoming John Connor
+											<br>
+											<br>
+											<br>Dekardkain
+											<br>
+											<br>
+											<div class="orange">In Progress</div>
+										</div>
+									</a>
+								</div>
+
+								<div class="slide slid9">
+									<div class="big">bigbew 1/1</div>
+
+									<a href="https://www.fanfiction.net/s/5601643/1/Just-Something-I-Should-Do">
+										<div class="child">
+											Just Something I Should Do
+											<br>
+											<br>
+											<br>bigbew
+											<br>
+											<br>
+											<div class="green">1/4: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/5761861/1/I-Wouldn-t-Be-Worth-Much-If-I-Couldn-t-Feel">
+										<div class="child">
+											I Wouldn't Be Worth Much
+											<br>If I Couldn't Feel
+											<br>
+											<br>bigbew
+											<br>
+											<br>
+											<div class="green">2/4: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/6196687/1/Faith-isn-t-Part-of-My-Programming">
+										<div class="child">
+											Faith Isn't Part Of My Programming
+											<br>
+											<br>
+											<br>bigbew
+											<br>
+											<br>
+											<div class="green">3/4: Completed</div>
+										</div>
+									</a>
+
+									<a href="https://www.fanfiction.net/s/7419825/1/I-m-Not-For-You-to-Understand">
+										<div class="child">
+											I'm Not For You To Understand
+											<br>
+											<br>
+											<br>bigbew
+											<br>
+											<br>
+											<div class="red">4/4: Abandoned</div>
+										</div>
+									</a>
 								</div>
 
 							</div>
