--- a/tock.html
+++ b/tock.html
@@ -41,6 +41,7 @@ onload = function() { RndText(); }
 
 
             <div id="bg"></div>
+            <div id="bg2"></div>
              <div id="headerText"></div>
 
 
