--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <body>
     <div class="verticalcenter">
         <center>
-            <div class="big">Damn, this place is empty.</div>
+           <img height="80" width="250" src="data/media/images/404.gif">
             <br>
             <br>
             <div class="medium">
