--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <body>
     <div class="verticalcenter">
         <center>
-           <img height="80" width="250" src="data/media/images/404.gif">
+           <img height="80" width="250" src="../data/media/images/404.gif">
             <br>
             <br>
             <div class="medium">
