--- a/tock.html
+++ b/tock.html
@@ -37,7 +37,7 @@ onload = function() { RndText(); }
             </div>
 
 
-            <div id="nowplaying">&#9658; L'Orange - My Magic Is The Best Magic</div>
+            <div id="nowplaying">&#9658; tomppabeats - u love</div>
 
 
             <div id="bg"></div>
@@ -49,8 +49,8 @@ onload = function() { RndText(); }
 
 
             <audio id="music" autoplay="true" loop="true" hidden="true" preload="auto">
-                  <source src="data/media/audio/4.mp3" type="audio/mpeg">
-                  <source src="data/media/audio/4.ogg" type="audio/ogg">
+                  <source src="data/media/audio/5.mp3" type="audio/mpeg">
+                  <source src="data/media/audio/5.ogg" type="audio/ogg">
                         Damn, your computer doesn't support this audio element!
             </audio>
 
