--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>404 Not Found</title>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/scripts/style.css">
-    <script type="text/javascript" src="/scripts/countdown.js"></script>
+    <script type="text/javascript" src="/scripts/countdownRedirect.js"></script>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 
