--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>404 Not Found</title>
+    <title>Uh-oh.</title>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/scripts/style.css">
     <script type="text/javascript" src="/scripts/countdownRedirect.js"></script>
